Closed
Bug 1257164
Opened 6 years ago
Closed 6 years ago
JSON.stringify hangs the browser
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla48
Tracking | Status | |
---|---|---|
firefox48 | --- | fixed |
People
(Reporter: nxrighthere, Assigned: Waldo)
Details
(Keywords: hang)
Attachments
(1 file)
3.41 KB,
patch
|
evilpie
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:46.0) Gecko/20100101 Firefox/46.0 Build ID: 20160314144540 Steps to reproduce: Code: var x = []; x[0x7fffffff]=1; JSON.stringify(x); Demo: https://jsfiddle.net/kLbf880o/6/ Actual results: Execution of this code constantly hangs the browser.
Reporter | ||
Updated•6 years ago
|
Reporter | ||
Updated•6 years ago
|
Severity: normal → critical
Summary: JSON.stringify() hangs the browser → JSON.stringify hangs the browser
Assignee | ||
Comment 1•6 years ago
|
||
Attachment #8740128 -
Flags: review?(evilpies)
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → jwalden+bmo
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 2•6 years ago
|
||
Comment on attachment 8740128 [details] [diff] [review] Patch Review of attachment 8740128 [details] [diff] [review]: ----------------------------------------------------------------- Uh <3 JS :/
Attachment #8740128 -
Flags: review?(evilpies) → review+
Comment 4•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/1e6cb22a8971
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in
before you can comment on or make changes to this bug.
Description
•