Bug 1257164 - Check for interrupts in a few loops in JSON.stringify to eliminate feedback-less hangs.  r=evilpie